[metadata]
name = hist
description = Hist classes and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/hist
author = Henry Schreiner
author_email = henry.schreiner@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
keywords =
    histogram
    boost-histogram

[options]
packages = find:
install_requires =
    boost-histogram@git+https://git@github.com/scikit-hep/boost-histogram.git@develop
    histoprint>=1.6
    numpy>=1.13.3
    typing_extensions;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.entry_points]
console_scripts =
    hist=hist.classichist:main

[options.packages.find]
where = src

[mypy]
warn_unused_configs = True
files = src
check_untyped_defs = True

[mypy-boost_histogram.*]
ignore_missing_imports = True

[mypy-histoprint]
ignore_missing_imports = True

[mypy-scipy.optimize]
ignore_missing_imports = True

[mypy-uncertainties]
ignore_missing_imports = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B9
ignore = E203, E231, E501, E722, W503, B950

[check-manifest]
ignore =
    .pre-commit-config.yaml
    .readthedocs.yml
    examples/**
    notebooks/**
    docs/**
    CONTRIBUTING.md
    *.html
    *.in
    *.json
    *.yml
    src/hist/version.py
    tests/.pytest_cache/**
    .all-contributorsrc

[tool:isort]
profile = black
multi_line_output = 3
