[metadata]
name = hist
description = Hist classes and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/hist
author = Henry Schreiner
author_email = henry.schreiner@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
keywords =
    histogram
    boost-histogram
project_urls =
    Documentation = https://hist.readthedocs.io/
    Bug Tracker = https://github.com/scikit-hep/hist/issues
    Discussions = https://github.com/scikit-hep/hist/discussions
    Changelog = https://hist.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    boost-histogram~=1.0.2
    histoprint>=1.6
    numpy>=1.13.3
    typing_extensions;python_version<"3.8"
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hist=hist.classichist:main

[mypy]
warn_unused_configs = True
files = src
python_version = 3.6
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True

[mypy-histoprint.*]
ignore_missing_imports = True

[mypy-scipy.optimize.*]
ignore_missing_imports = True

[mypy-uncertainties.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-mplhep.plot.*]
ignore_missing_imports = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B9
ignore = E203, E231, E501, E722, W503, B950

[check-manifest]
ignore =
    .pre-commit-config.yaml
    .readthedocs.yml
    examples/**
    notebooks/**
    docs/**
    CONTRIBUTING.md
    *.html
    *.in
    *.json
    *.yml
    src/hist/version.py
    tests/.pytest_cache/**
    .all-contributorsrc
    noxfile.py

[tool:isort]
profile = black
multi_line_output = 3
