[metadata]
name = hist
description = Hist classes and utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/hist
author = Henry Schreiner
author_email = henry.schreiner@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed
keywords =
    histogram
    boost-histogram
project_urls =
    Documentation = https://hist.readthedocs.io/
    Bug Tracker = https://github.com/scikit-hep/hist/issues
    Discussions = https://github.com/scikit-hep/hist/discussions
    Changelog = https://hist.readthedocs.io/en/latest/changelog.html

[options]
packages = find:
install_requires =
    boost-histogram~=1.1.0
    histoprint>=1.6
    numpy>=1.14.5
    typing_extensions;python_version<"3.8"
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hist=hist.classichist:main

[flake8]
max-line-length = 80
select = C, E, F, W, B, B9
ignore = E203, E231, E501, E722, W503, B950
